test/kubernetes/e2e/features/agentgateway/testdata/agentgateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent-gateway
spec:
  selector:
    matchLabels:
      app: agent-gateway
  template:
    metadata:
      labels:
        app: agent-gateway
    spec:
      terminationGracePeriodSeconds: 1
      containers:
        - name: agent-gateway
          image: ghcr.io/agentgateway/agentgateway:0b53199 # ghcr.io/agentgateway/agentgateway:latest
          imagePullPolicy: IfNotPresent
          args:
            - --file=/config/config.json
          env:
            - name: NODE_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: GW_NAME
              value:  agent-gateway
            - name: RUST_BACKTRACE
              value: "1"
            - name: RUST_LOG
              value: debug
          volumeMounts:
            - name: config-volume
              mountPath: /config
      volumes:
        - name: config-volume
          configMap:
            name: agent-gateway-config
---
apiVersion: v1
kind: Service
metadata:
  name: agent-gateway
spec:
  selector:
    app: agent-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: mcp
    - protocol: TCP
      port: 9090
      targetPort: 9090
      name: a2a
  type: ClusterIP
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: agent-gateway-config
data:
  config.json: |
    {
      "type": "xds",
      "xds_address": "http://kgateway.kgateway-system.svc.cluster.local:9977",
      "metadata": {},
      "alt_xds_hostname": "agent-gateway.default.svc.cluster.local",
      "listeners": []
    }
