test/kubernetes/e2e/features/agentgateway/testdata/gateway-self-managed.yaml
kind: GatewayParameters
apiVersion: gateway.kgateway.dev/v1alpha1
metadata:
  name: kgateway
spec:
  selfManaged: {}
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: agentgateway
spec:
  controllerName: kgateway.dev/kgateway
  parametersRef:
    group: gateway.kgateway.dev
    kind: GatewayParameters
    name: kgateway
    namespace: default
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: agent-gateway # Note: this has to match the self-managed Deployment name
spec:
  gatewayClassName: agentgateway
  listeners:
    - protocol: kgateway.dev/mcp
      port: 8080
      name: mcp
      allowedRoutes:
        namespaces:
          from: All
    - protocol: kgateway.dev/a2a
      port: 9090
      name: a2a
      allowedRoutes:
        namespaces:
          from: All
