test/kubernetes/e2e/features/agentgateway/testdata/mcp.yaml
# Deployment for the MCP github tool
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-tool
  labels:
    app: mcp-tool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcp-tool
  template:
    metadata:
      labels:
        app: mcp-tool
    spec:
      containers:
        - name: mcp-tool
          image: ghcr.io/agentgateway/agentgateway:0.4.26
          args:
            - -f
            - /etc/agentgateway/config.json
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: github-config
              mountPath: /etc/agentgateway/config.json
              subPath: config.json
      volumes:
        - name: github-config
          configMap:
            name: github-config
---
apiVersion: v1
kind: Service
metadata:
  name: mcp-tool
spec:
  selector:
    app: mcp-tool
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      appProtocol: kgateway.dev/mcp
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: github-config
data:
  config.json: |
    {
      "type": "static",
      "listeners": [
        {
          "name": "sse",
          "protocol": "MCP",
          "sse": {
            "address": "[::]",
            "port": 3000
          }
        }
      ],
      "targets": {
        "mcp": [
          {
            "name": "github",
            "stdio": {
              "cmd": "npx",
              "args": [
                "-y",
                "@modelcontextprotocol/server-github"
              ],
              "env": {
                "GITHUB_PERSONAL_ACCESS_TOKEN": "fake"
              }
            }
          }
        ]
      }
    }
